# stateprop

./: CHANGELOG.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml
docs/: EXAMPLES_PLAN.md
examples/: .gitignore  00_README.md  01_saturation_curve.py  02_steam_tables.py  03_rankine_cycle.py  04_phase_envelope_pure.py  05_property_grid.py  05b_property_grid_mass_based.py  06_compressed_natural_gas_storage.py  07_joule_thomson_inversion.py  08_natural_gas_flash.py  09_cubic_phase_envelope.py  11_lng_two_phase_flash.py  12_volume_translation_workflow.py  13_pseudo_components.py  14_tbp_discretization.py  15_natural_gas_dewpoint_design.py  16_cubic_database_integration.py  16b_chemsep_database.py  16c_pcsaft_database.py  17_binary_vle.py  18_lle_water_butanol.py  19_lle_extraction.py  20_nrtl_lle_regression.py  21_residue_curves_methanol_methyl_acetate.py  22_excess_enthalpy_validation.py  23_unifac_dortmund_vs_classic.py  24_auto_flash_phase_types.py  25_stability_tpd_diagnostic.py  26_partial_vaporization_drum.py  27_critical_locus_binary.py  28_state_function_flashes.py  29_saft_pure_and_mixture.py  31_water_alcohol_density_pcsaft.py  32_transport_properties.py  33_natural_gas_pipeline_pressure_drop.py  34_reaction_equilibrium_classics.py  35_steam_methane_reforming.py  36_real_gas_K_eq_industrial.py  37_liquid_phase_esterification.py  (+38 more)
fluids/: nitrogen.json
stateprop/: __init__.py  chemdb.py  chemsep.py  core.py  flash.py  fluid.py  phase_envelope.py  properties.py  pseudo.py  saturation.py  tbp.py
stateprop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stateprop/__pycache__/: core._alpha_0_kernel-392.py313.1.nbc  core._alpha_0_kernel-392.py313.2.nbc  core._alpha_0_kernel-392.py313.3.nbc  core._alpha_0_kernel-392.py313.nbi  core._alpha_0_kernel-531.py313.1.nbc  core._alpha_0_kernel-531.py313.nbi  core._alpha_r_double_exponential-365.py313.1.nbc  core._alpha_r_double_exponential-365.py313.nbi  core._alpha_r_exponential-93.py313.1.nbc  core._alpha_r_exponential-93.py313.2.nbc  core._alpha_r_exponential-93.py313.3.nbc  core._alpha_r_exponential-93.py313.nbi  core._alpha_r_gaob-418.py313.1.nbc  core._alpha_r_gaob-418.py313.nbi  core._alpha_r_gaussian-131.py313.1.nbc  core._alpha_r_gaussian-131.py313.2.nbc  core._alpha_r_gaussian-131.py313.3.nbc  core._alpha_r_gaussian-131.py313.nbi  core._alpha_r_gaussian-141.py313.1.nbc  core._alpha_r_gaussian-141.py313.nbi  core._alpha_r_kernel-355.py313.1.nbc  core._alpha_r_kernel-355.py313.2.nbc  core._alpha_r_kernel-355.py313.3.nbc  core._alpha_r_kernel-355.py313.nbi  core._alpha_r_kernel-479.py313.1.nbc  core._alpha_r_kernel-479.py313.nbi  core._alpha_r_nonanalytic-174.py313.1.nbc  core._alpha_r_nonanalytic-174.py313.2.nbc  core._alpha_r_nonanalytic-174.py313.3.nbc  core._alpha_r_nonanalytic-174.py313.nbi  core._alpha_r_nonanalytic-184.py313.1.nbc  core._alpha_r_nonanalytic-184.py313.nbi  core._alpha_r_polynomial-58.py313.1.nbc  core._alpha_r_polynomial-58.py313.2.nbc  core._alpha_r_polynomial-58.py313.3.nbc  core._alpha_r_polynomial-58.py313.nbi  core.alpha_0_derivs-486.py313.1.nbc  core.alpha_0_derivs-486.py313.2.nbc  core.alpha_0_derivs-486.py313.3.nbc  core.alpha_0_derivs-486.py313.nbi  (+56 more)
stateprop/activity/: __init__.py  batch.py  compounds.py  cross_stability.py  excess.py  gamma_phi.py  gamma_phi_eos.py  gamma_phi_eos_3phase.py  lle.py  lle_coverage.py  nrtl.py  regression.py  stability.py  unifac.py  unifac_database.py  unifac_dortmund.py  unifac_lle.py  unifac_lyngby.py  uniquac.py  vapor_stability.py
stateprop/cubic/: __init__.py  critical.py  envelope.py  eos.py  flash.py  from_chemicals.py  mixture.py  three_phase_flash.py  volume_translation.py
stateprop/data/: chemsep.json
stateprop/distillation/: __init__.py  column.py  tray_hydraulics.py
stateprop/electrolyte/: __init__.py  amine_column.py  amine_column_ns.py  amine_stripper.py  amines.py  complexation.py  enrtl.py  flowsheet.py  heat_exchanger.py  minerals.py  multi_pitzer.py  pitzer.py  sour_water.py  sour_water_column.py  sour_water_flowsheet.py  utils.py
stateprop/extraction/: __init__.py  extraction_column.py
stateprop/fluids/: carbondioxide.json  nitrogen.json  water.json
stateprop/fluids/binaries/: gerg2008.json  test_co2_n2.json
stateprop/fluids/coolprop/: 1butene.json  _manifest.json  acetone.json  air.json  ammonia.json  argon.json  benzene.json  carbondioxide.json  carbonmonoxide.json  carbonylsulfide.json  chlorine.json  cis2butene.json  (+114 more)
stateprop/mixture/: __init__.py  component.py  critical.py  departure.py  envelope.py  flash.py  mixture.py  properties.py  reducing.py  stability.py  three_phase_flash.py
stateprop/process/: __init__.py  amine_column.py
stateprop/reaction/: __init__.py  equilibrium.py  gibbs_min.py  liquid_phase.py  multi.py  reactive_column.py  reactive_flash.py  thermo.py
stateprop/saft/: __init__.py  database.py  eos.py  mixture.py
stateprop/transport/: __init__.py  chung.py  stiel_thodos.py  surface_tension.py  wassiljewa.py
tests/: run_activity_tests.py  run_chemdb_tests.py  run_chemicals_interface_tests.py  run_chemsep_tests.py  run_converter_tests.py  run_coolprop_fluids_tests.py  run_cubic_tests.py  run_distillation_tests.py  run_electrolyte_tests.py  run_examples_tests.py  run_extraction_tests.py  run_gerg_caloric_validation.py  run_gerg_tests.py  run_gerg_validation.py  run_mixture_tests.py  run_pseudo_tests.py  run_reaction_tests.py  run_saft_database_tests.py  run_saft_tests.py  run_tbp_tests.py  run_transport_tests.py  run_uv_flash_tests.py  run_validation_tests.py  test_co2.py  test_flash.py  test_fluids.py  test_mixture.py  test_water.py
tools/: build_fluid_library.py  convert_coolprop.py
(+23 files in other folders)
